fix: Add top margin to nav-container for improved layout spacing

--- a/assets/css/unminified-css.css
+++ b/assets/css/unminified-css.css
@@ -2600,7 +2600,8 @@ strong {
     }
 
     .nav-container {
-        margin: auto
+        margin: auto;
+        margin-top: 28px;
     }
 
     .hero-inner {
